[tool.poetry]
name = "pytorchdev"
version = "0.1.0"
description = ""
authors = ["Meher Bhaskar <meherbhaskar.madiraju@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
h5py = "^3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
